Changed <P> so that I can use Pull command

--- a/Page1.html
+++ b/Page1.html
@@ -3,7 +3,7 @@
 <body>
 <h1> ITM)-544-444 Cloud Computing</h1>
 <p> Sukanya Nagarajan</p>
-<p1> CWID: A20328620 </p1>
+<p> CWID: A20328620 </p>
 <a href="https://s3-us-west-2.amazonaws.com/itmo-544-sukanya-bucket02/Sukanya.png"> My Photo </a>
 <a href="Page2.html"> Link to Page2.html </a>
 </body>
