--- a/Page2.html
+++ b/Page2.html
@@ -5,5 +5,5 @@
 <p> Sukanya Nagarajan</p>
 <p1> CWID  A20328620 </p1>
 <img src="/images/IIT_Scarlet_Hawks.svg.png" width="104" height="142"/>
-<a href="Page1.html" > Go Back to Page 1</a>
+<a href="index.html" > Go Back to Page 1</a>
 </body>
