Changed <a> to point to index.html

--- a/Page2.html
+++ b/Page2.html
@@ -4,6 +4,6 @@
 <h1> ITMO-544-444 Cloud Computing</h1>
 <p> Sukanya Nagarajan</p>
 <p1> CWID  A20328620 </p1>
-<img src="/images/IIT_Scarlet_Hawks.svg.png" width="104" height="142"/>
-<a href="Page1.html" > Go Back to Page 1</a>
+<img src="/images/IIT_Scarlet_Hawks.png" width="104" height="142"/>
+<a href="index.html" > Go Back to Page 1</a>
 </body>
