modified Image url

--- a/Page2.html
+++ b/Page2.html
@@ -4,7 +4,8 @@
 <h1> ITMO-544-444 Cloud Computing</h1>
 <p> Sukanya Nagarajan</p>
 <p1> CWID  A20328620 </p1>
-<img src="/images/IIT_Scarlet_Hawks.png" width="104" height="142"/>
+<img src="images/IIT_Scarlet_Hawks.svg.png"/>
+
 <a href="index.html" > Go Back to Index Page</a>
 </body>
 </html>
